@@ -34,10 +34,8 @@ Original quota format with 16-bit UIDs / GIDs,
 Quota format with 32-bit UIDs / GIDs, 64-bit space usage, 32-bit inode usage and limits,
 .B vfsv1
 Quota format with 64-bit quota limits and usage,
-.B rpc
-(quota over NFS),
 .B xfs
-(quota on XFS filesystem)
+Quota on XFS filesystem.
 .TP
 .B -q, --quota-tab=\f2quotatab\f1
 Use
