@@ -1,4 +1,6 @@
 Changes in quota-tools from 3.17 to 4.00-pre2
+* fix quotaon to print all informational messages only in verbose mode (Jan Kara)
+* fix warnquota manpage to not speak about RPC (Jan Kara)
 * fix repquota to get latest quota info header (Jan Kara)
 * do not count system inodes into quota for ext[234] (Jan Kara)
 * improve detection of XFS kernel quota interface (Jan Kara)
